# tank-battle

./: .gitmodules  README.md
UnitTest/: GeometryUnitTest.cpp  StuffUT.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters
UnitTest/TestData/: Intersection_01.ggb  Intersection_02.ggb  Intersection_03.ggb  Intersection_04.ggb  Intersection_05.ggb  Intersection_06.ggb  Intersection_07.ggb  Intersection_08.ggb  Intersection_09.ggb  Intersection_10.ggb  Intersection_11.ggb  Intersection_12.ggb  Intersection_13.ggb  Intersection_14.ggb  NoIntersection.ggb  TouchEdge1.ggb  TouchEdge2.ggb  TouchEdge3.ggb  TouchVertex1.ggb  TouchVertex2.ggb
src/: BasicApp-1.cpp  BloomingNeonApp.cpp  CMakeLists.txt
src/GameControllerInterfaces/: CMakeLists.txt  GameControllerInterfaces.h  GameInterface.cpp  GameInterface.h  PlayerContext.cpp  PlayerContext.h  TankCommandsBuilder.cpp  TankCommandsBuilder.h  TankController.cpp  TankController.h
src/GameControllers/: GameControllers.h
src/GameControllers/DumpPlayer/: CMakeLists.txt  DumpPlayer.cpp  DumpPlayer.h
src/GameControllers/ScriptedPlayer/: CMakeLists.txt  PlayerSciptingLibrary.cpp  PlayerSciptingLibrary.h  ScriptedPlayer.cpp  ScriptedPlayer.h
src/GameControllers/ScriptedPlayer/cmake/ffscript/: CMakeLists.txt  configure.bat  ffscriptConfig.cmake.in
src/GameControllers/SimplePlayer/: CMakeLists.txt  SimplePlayer.cpp  SimplePlayer.h
src/GameControllers/scripts/: RunIfHurtAndFire.c955  S02.AutoBot2.c955  S03.StayAndFire.c955  S04.RandomMovingAndFire.c955  S05.RunIfHurtAndFire.c955  S06.SmartMoving.c955  ScriptPlayer1.c955  ScriptPlayer2.c955  ScriptPlayer3.c955  StayAndFire.c955
src/application/: CMakeLists.txt  LogAdapter.cpp  LogAdapter.h  TankBattleApp.cpp
src/application/Controllers/: PlayerControllerTest.cpp  PlayerControllerTest.h  PlayerControllerUI.cpp  PlayerControllerUI.h
src/application/Engine/: Animation.cpp  Animation.h  Barrier.cpp  Barrier.h  Bullet.cpp  Bullet.h  CollisionDetector.cpp  CollisionDetector.h  DrawableObject.cpp  DrawableObject.h  GameComponent.cpp  GameComponent.h  GameController.cpp  GameController.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  GameResource.cpp  GameResource.h  Geometry.h  LifeTimeControlComponent.cpp  LifeTimeControlComponent.h  LiveObject.cpp  LiveObject.h  PlayerController.h  Scene.cpp  Scene.h  Tank.cpp  Tank.h  TankBarrel.cpp  TankBarrel.h  TankBody.cpp  TankBody.h  TexturedObject.cpp  TexturedObject.h  Timer.cpp  Timer.h  UIThreadRunner.cpp  UIThreadRunner.h
src/application/EngineSpecific/: Barrier.cpp  Barrier.h  Bullet.cpp  Bullet.h  GameController.cpp  GameController.h  GameStateManager.cpp  GameStateManager.h  PlayerController.cpp  PlayerController.h  Tank.cpp  Tank.h  TankBarrel.cpp  TankBarrel.h  TankBody.cpp  TankBody.h
src/application/Resources/: app.icns
src/application/UI/: CiWidget.cpp  CiWidget.h  ImPopup.cpp  Panel.cpp  Panel.h  Spliter.cpp  Spliter.h  Widget.h  WxAppLog.cpp  WxAppLog.h  WxControlBoard.cpp  WxControlBoard.h  WxGameStatistics.cpp  WxGameStatistics.h  WxGameView.cpp  WxGameView.h  WxPlayerInfo.cpp  WxPlayerInfo.h  WxRadarView.cpp  WxRadarView.h  WxTankPeripheralsView.cpp  WxTankPeripheralsView.h
src/application/assets/: blur.frag  radar.frag  radar.vert
src/application/battle/: BattlePlatform.cpp  BattlePlatform.h  GameCapture.cpp  GameCapture.h  GameInterface.cpp  GameInterfaceImpl.cpp  GameInterfaceImpl.h  ObjectViewContainer.cpp  ObjectViewContainer.h  PlayerContext.cpp  PlayerContext.h  PlayerContextImpl.cpp  PlayerContextImpl.h  Radar.cpp  Radar.h  TankCamera.cpp  TankCamera.h  TankCommandsBuilder.h  TankController.cpp  TankController.h  TankControllerModuleWrapper.cpp  TankControllerModuleWrapper.h  TankControllerWorker.cpp  TankControllerWorker.h
src/cmake/: cinder-imgui-unix.cmake  cinder-imgui.cmake  cinder.cmake
src/common/: AutoScope.cpp  AutoScope.h  CMakeLists.txt  GameUtil.hpp  Geometry.h  HandlerCollection.hpp  ILogger.cpp  ILogger.h  SpinArray.hpp  SyncMessageQueue.hpp  Utility.cpp  Utility.h
src/sample/blur/: BasicApp-1.cpp  BloomingNeonApp.cpp
